# unwind_safe.rs

./: Cargo.toml  README.md
.github/workflows/: CI.yml  future-proof.yml
src/: compile_fail_tests.md  lib.rs
tests/: main.rs
